--- a/_config.yml
+++ b/_config.yml
@@ -76,19 +76,19 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : 
 
 
 # Site Author
 author:
   name             : "Omar Sharif"
-  avatar           : "Sharif.jpg"
-  bio              : "Graduate student at Dartmouth CS, advised by Prof. Sarah M. Preum. Interested to apply deep learning to understand natural language."
+  avatar           : "sharif-emnlp.jpg"
+  bio              : "Graduate student at Dartmouth CS. Interested to apply deep learning to understand natural language."
   location         : "Hanover, New Hampshire"
   employer         : #"Lecturer at Dept. of CSE, CUET."
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=TBBRv2wAAAAJ&view_op=list_works&authuser=1&sortby=pubdate"
-  email            : "omar.sharif@cuet.ac.bd"
+  email            : "omar.sharif1303@gmail.com"
   researchgate     :  "https://www.researchgate.net/profile/Omar-Sharif-5"
   uri              :
   bitbucket        :
