--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Omar Sharif"
-  avatar           : "p2.jpg"
+  avatar           : "sharif.jpg"
   bio              : "Graduate student at Dartmouth CS. Interested to apply deep learning to understand natural language."
   location         : "Hanover, New Hampshire"
   employer         : #"Lecturer at Dept. of CSE, CUET."
