--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Teaching"
     url: /teach/ 
     
-  - title: "Education"
+  - title: "Education/Experience"
     url: /education/ 
    
   - title: "Achievements/Skills"
